--- a/_data/author.yaml
+++ b/_data/author.yaml
@@ -1,6 +1,6 @@
-name: "Your Name"
+name: "Filippo Magi"
 role: "PhD Student"
-email: "your.email@phd.unipi.it"
+email: "filippo.magi@phd.unipi.it"
 phone: "+39 050 221XXXX"
 address:
   street: "Largo Bruno Pontecorvo 3"
@@ -16,13 +16,17 @@ affiliation: "Department of Computer Science, University of Pisa"
 affiliation_url: "https://di.unipi.it/"
 
 bio: >
-  Short bio here (1-3 sentences). Research areas, advisor (optional), lab group, and interests.
+Computer scientist, studying operational research and optimization.
+Working on parallelizing branch-and-bound algorithms for combinatorial optimization problems in SMS++.
+Working with Prof. Antonio Frangioni.
 
 photo: "/assets/img/me.png" # e.g., /assets/img/me.jpg — leave empty to hide the propic automatically
 # Optional links (leave any blank to hide)
 website: ""
 scholar: "" # e.g., https://scholar.google.com/citations?user=XXXX
 orcid: "" # e.g., https://orcid.org/0000-0000-0000-0000
-github: ""
+github: "https://github.com/Fiden99"
+gitlab: "https://gitlab.com/Fiden99"
 twitter: ""
-linkedin: ""
+linkedin: "https://www.linkedin.com/in/filippo-magi-86ab01172/"
+facebook: "https://www.facebook.com/Filippo.Magi.99"
