--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -5,39 +5,32 @@ education:
     location: "Pisa, Italy"
     period: "2023 - present"
     description: >
-      Researching about very interesting topics, that only me and my advisor understand.
+      Researching operational research, parallelizing branch and bound problems in SMS++.
 
-  - title: "MSc in Artificial Intelligence and Weird Stuff"
-    institution: "University of Neverland"
-    institution_url: "https://www.youtube.com/watch?v=4SK1KN6ToNw"
-    location: "Never Never, Neverland"
+  - title: "MSc in Computer Science"
+    institution: "University of Milan"
+    institution_url: "di.unimi.it"
+    location: "Milan,Italy"
     period: "2021 - 2023"
     description: >
-      Graduated with honors. Thesis on deep learning for automated theorem proving.
+      110/110 cum Laude. Thesis on tactical deconfliction in Urban Air mobility, both mathematical programming and meta-heuristic.
 
   - title: "BSc in Computer Science"
-    institution: "University of Atlantis"
-    institution_url: "https://it.wikipedia.org/wiki/Atlantis_-_L%27impero_perduto"
-    location: "Atlantis, Arctic"
+    institution: "University of Milan"
+    institution_url: "https://www.di.unimi.it/"
+    location: "Milan, Italy"
     period: "2018 - 2021"
     description: >
-      Graduated with honors. Thesis on distributed systems for underwater basket weaving.
+      96/119. Thesis on bidirectional algorithms for max flow problems.
     thesis: "assets/img/me.png"
 
 work:
-  - title: "Research Intern"
-    institution: "Very Peculiar Institute"
-    institution_url: "https://www.example.com/"
-    location: "Forlì, Italy"
-    period: "Summer 2022"
-    description: >
-      Worked in the best city of the world.
-    thesis: "https://example.com/phd_thesis.pdf"
-
-  - title: "Teaching Assistant"
-    institution: "University of Pisa"
-    institution_url: "https://di.unipi.it/"
-    location: "Pisa, Italy"
-    period: "2023 - present"
-    description: >
-      Helping brilliant students and clever graders survive machine learning assignments with dignity.
+#
+#
+#  - title: "Teaching Assistant"
+#    institution: "University of Pisa"
+#    institution_url: "https://di.unipi.it/"
+#    location: "Pisa, Italy"
+#    period: "2023 - present"
+#    description: >
+#      Helping brilliant students and clever graders survive machine learning assignments with dignity.
