--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -14,6 +14,7 @@ education:
     period: "2021 - 2023"
     description: >
       110/110 cum Laude. Thesis on tactical deconfliction in Urban Air mobility, both mathematical programming and meta-heuristic.
+    thesis: "https://github.com/Fiden99/UAMdeconflictionMasterThesis"
 
   - title: "BSc in Computer Science"
     institution: "University of Milan"
@@ -21,8 +22,8 @@ education:
     location: "Milan, Italy"
     period: "2018 - 2021"
     description: >
-      96/119. Thesis on bidirectional algorithms for max flow problems.
-    thesis: "assets/img/me.png"
+      96/110. Thesis on bidirectional algorithms for max flow problems.
+    thesis: "https://github.com/Fiden99/tesi--Algoritmi-bi-direzionali-per-problemi-di-flusso-su-rete"
 
 work:
 #
